app/assets/stylesheets/styles/common.scss
/////////////////////////////////////////////////////////////////////////////
// common.scss
//
// Place all the styles related to multiple controllers here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
//
/////////////////////////////////////////////////////////////////////////////
//@import "../base/globals";

html, 
body {
  margin: 0;
  padding: 0;
}

body {
  font-family: $g-font-family-default;
}

.text-center {
  text-align: center;
}

a {
  color: #D6AD52;
}

a:hover { 
  color: #F3CE7D; 
  text-decoration: none; 
}

// To add minor padding, important on mobile
.small-side-margins {
  margin-left: 15px;
  margin-right: 15px;
}

/****************************************************************************
* Animated >> Buttons 
*
* Below are for the animated '[text] >>'' buttons on both the
* home page and the property show page
*****************************************************************************/
.btn-arrow-anim {
  background-color: hsl(360, 95%, 38%);
  border-radius: 5px 5px 5px 5px;
  border-width: 0px;
  color: white;
  font-size: 20px;
  font-family: $g-font-family-default; // Needed, does not inherit from body
  height: 28px;
  width:  130px;
}

  /* The span element inside the button that contains the text */
  .btn-arrow-anim__text {
    cursor: pointer;
  }

  .btn-arrow-anim--green {
     background-color: hsl(126, 52%, 72%);
  }

  /* Override for "Search Again" button on bottom of property show page */
  .btn-arrow-anim--wide-square-bottom {
    border-radius: 10px 10px 0px 0px;
    width: 200px;
  }

  .btn-arrow-anim--wide {
    border-radius: 5px 5px 5px 5px;
    width: 200px;
  }

  .btn-arrow-anim:hover {
    background-color: #ff0000; 
    color: white;
  }
  
  .btn-arrow-anim--green:hover {
    background-color: #00ff00; 
    color: white;
  }

  /* below 4 sections used for animating Search >> button 
   * when hovering over it. */
  
  .btn-arrow-anim span {
    cursor: pointer;
    display: inline-block;
    position: relative;
    transition: 0.5s;
  }
  
  .btn-arrow-anim span:after {
    content: '»';
    opacity: 0;
    position: absolute;
    right: -20px;
    top:   0;
    transition: 0.5s;
  }
  
  .btn-arrow-anim:hover span {
    padding-right: 25px;
  }
  
  .btn-arrow-anim:hover span:after {
    opacity: 1;
    right  : 0;
  }

/* The navigation bar */
section ul {
	width: 100%;
	list-style: none;
}

section li {
	width: 100px;
	float: right;
	border-right: none;
	text-align: center;
	list-style: none;
}

section li:last-child {
	border-right: none;
}

section li a {
	color: #AAAAAA;
	display: block;
	width: 100%;
	background: #000;
	font-size: 1.35em;
	text-decoration: none;
}

section li a:hover {
	background: #ddd;
	color: black;
}

#black-bar {
	position: fixed;
	top: 0;
	left: 0;
	height: 27px;
	background-color: black;
	width: 100%;
}
	
#burger {
	display: none;
}
	
  @media screen and (max-width: 768px) {
  	#burger {
  		width: 1.4em;
  		display: block;
  		background: #FFF;
  		color: #AAAAAA;
  		font-size: 1.35em;
  		text-align: center;
  		float: right;
  	}
  	#nav.js {
  		display: none;
  	}
  	section ul {
  		width: 115%;
  		opacity: 0.5;
  		list-style: none;
  	}
  	section li {
  		color: #AAAAAA;
  		width: 20%;
  		margin-left: 80%;
  		border-right: none;
  		background-color: black;
  		text-align: left;
  	}
  	#black-bar {
  		background-color: white;
  	}
  }

.top-padding-to-miss-navbar {
  margin-top: 115px;
}

.top-padding-to-miss-ah-header {
  margin-top: 85px;
}

